--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -648,7 +648,7 @@ ul.social > li > a:hover{
 #slide-menu-wrap > div.slide-menu-body  ul.cate-menu > li{
     font-weight: 600;
     cursor: pointer;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 
 #slide-menu-wrap > div.slide-menu-body  ul.cate-menu > li a{
@@ -771,8 +771,12 @@ ul.social > li > a:hover{
         font-size: 1.7rem;
     }
 
-    #slide-menu-wrap > div.slide-menu-body  ul.cate-menu > li{
-        margin: 10px 0;
+    /* #slide-menu-wrap > div.slide-menu-body  ul.cate-menu > li{
+        margin: 35px 0;
+    } */
+
+    #slide-menu-wrap > div.slide-menu-body ul.cate-menu ul.submenu > li{
+        margin: 15px 0;
     }
 
     #slide-menu-wrap div.close-btn{
@@ -1102,6 +1106,10 @@ div#main .img-box-wrap > div.img-box:nth-child(3){
         margin-bottom: 30px; 
     }
 
+    .article-box-wrap .article-box > .article-body > h4.title{
+        font-size: 1.3em;
+    }
+
     #recent-articles > .con > h2.title{
 
         font-size: 2.3rem;
@@ -1112,6 +1120,9 @@ div#main .img-box-wrap > div.img-box:nth-child(3){
 }
 
 @media(max-width: 500px){
+    .article-box-wrap{
+    justify-content: center;
+    }
      .article-box-wrap > a.article{
         width: 90%;
         margin-bottom: 50px;
@@ -1163,9 +1174,10 @@ footer > div.con{
     -webkit-transition: height 0.5s;
     -o-transition: height 0.5s;
     transition: height 0.5s;
+    flex-direction: column;
 }
 
-footer > div.con > .text-box{
+footer > div.con  .text-box{
     color: #fff;
     font-size: 1.7rem;
     -webkit-transition: font-size 0.5s;
@@ -1173,17 +1185,18 @@ footer > div.con > .text-box{
     transition: font-size 0.5s;
 }
 
-@media(max-width: 768px){
-    footer > div.con{
-        height: 150px;       
-      }
-
-
-    }
 
     @media(max-width: 768px){
-        footer > div.con > .text-box{
+        footer > div.con{
+            height: 150px;       
+          }
+    
+        footer > div.con  .text-box{
             font-size: 1.4rem;
+        }
+
+        footer .social{
+            display: flex;
         }
 
     }
@@ -1361,6 +1374,9 @@ div.detail > div.article_info > div.info-wrap{
         margin-top: 30px;
     
     }
+    div.detail > div.article_info > .article_title {
+        font-size: 2em;
+    }
 }
 
 /* 게시물 디테일 끝 */
@@ -1391,6 +1407,13 @@ div.list{
 }
 
 
+div.list .article-box-wrap .article-box > .article-body > h4.title {
+    
+    flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+}
 
 
 
@@ -1405,6 +1428,7 @@ div.list .article-box-wrap .article-box > .article-body > h4.title > span.title:
 }
 
 div.list .article-box-wrap .article-box > .article-body > h4.title > span.date{
+    padding: 5px 0;
     font-size: 0.55em;
     font-weight: normal;
     color: rgba(108,101,101,0.6);
@@ -1416,11 +1440,7 @@ div.list .article-box-wrap .article-box > .article-body > .summary{
             justify-content: center;
 }
 
-.article-box-wrap .article-box > .article-body > h4.title{
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
+
 
 
 @media(min-width:768px){
@@ -1431,6 +1451,9 @@ div.list .article-box-wrap .article-box > .article-body > .summary{
         display: block;
     }
 
+    div.list .article-box-wrap{
+        justify-content: center;
+    }
 
 
     div.list .article-box-wrap .article-box{
@@ -1470,12 +1493,7 @@ div.list .article-box-wrap .article-box > .article-body > .summary{
         display: none;
     }
     
-    div.list .article-box-wrap .article-box > .article-body > h4.title{
-        font-size: 1.8em;
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between;
-    }
+
     
     
     
@@ -1512,6 +1530,15 @@ div.list .article-box-wrap .article-box > .article-body > .summary{
         -webkit-transform: none;
             -ms-transform: none;
                 transform: none;
+    }
+
+    div.list .article-box-wrap .article-box > .article-body > h4.title{
+        display: block;
+        font-size: 1.3em;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+
     }
    
 }
