썸네일주소 입력폼 추가

--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -822,7 +822,7 @@ ul.social > li > a:hover{
 
 div#main .con{
     height: 350px;
-    background-color:#F6EBEB;
+    background-color:#e6d0cf;
     overflow: hidden;
     position: relative;
 }
