--- a/public/resource/common.css
+++ b/public/resource/common.css
@@ -33,6 +33,10 @@
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     color: inherit;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
 }
 
 /* 라이브러리 */
@@ -358,6 +362,25 @@ border-radius: 7.5px;
     background: transparent;
 }
 
+#contents div.count-box{
+    padding: 30px 0;
+    margin-bottom: 50px;
+}
+#contents div.count-box > a.count{
+    font-size: 1.5rem;
+    width: 30px;
+    height: 30px;
+   background: #bda3a3;
+   color: #fff;
+    margin: 0 5px;
+    opacity: 0.7;
+    transition: opacity 0.3s;
+    
+}
+
+#contents div.count-box > a.count:hover{
+    opacity: 1;
+}
 
 
 ul.social > li > a{
@@ -902,7 +925,7 @@ div#main .img-box-wrap > div.img-box:nth-child(3){
 
 #recent-articles > .con {
     margin: 75px auto;
-    margin-bottom: 200px;
+    margin-bottom: 30px;
 }
 
 #recent-articles > .con > h2.title{
@@ -1086,9 +1109,7 @@ div#main .img-box-wrap > div.img-box:nth-child(3){
 }
 
 @media(min-width: 1001px){
-    #recent-articles .article-box-wrap > a.article:last-child{      
-       display: none;
-    }
+
 }
 
 @media(max-width: 1000px){
@@ -1191,6 +1212,8 @@ footer > div.con  .text-box{
 }
 
 
+
+
     @media(max-width: 768px){
         footer > div.con{
             height: 150px;       
@@ -1200,8 +1223,13 @@ footer > div.con  .text-box{
             font-size: 1.4rem;
         }
 
-        footer .social{
+        footer ul.social{
             display: flex;
+        }
+
+        footer ul.social > li > a{
+          
+            font-size: 2rem;
         }
 
     }
@@ -1403,7 +1431,7 @@ div#main div.text-box.cate-item-name{
 
 div.list{
     margin: 100px auto;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
 }
 
 .no-article{
@@ -1445,6 +1473,8 @@ div.list .article-box-wrap .article-box > .article-body > .summary{
         -ms-flex-pack: center;
             justify-content: center;
 }
+
+
 
 
 
